; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/kadmin/extr_mod.c_mod_entry.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/kadmin/extr_mod.c_mod_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.modify_options = type { i32 }

@do_mod_entry = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"mod\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mod_entry(%struct.modify_options* %0, i32 %1, i8** %2) #0 {
  %4 = alloca %struct.modify_options*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.modify_options* %0, %struct.modify_options** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8** %2, i8*** %6, align 8
  store i64 0, i64* %7, align 8
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %26, %3
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %29

13:                                               ; preds = %9
  %14 = load i8**, i8*** %6, align 8
  %15 = load i32, i32* %8, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8*, i8** %14, i64 %16
  %18 = load i8*, i8** %17, align 8
  %19 = load i32, i32* @do_mod_entry, align 4
  %20 = load %struct.modify_options*, %struct.modify_options** %4, align 8
  %21 = call i64 @foreach_principal(i8* %18, i32 %19, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), %struct.modify_options* %20)
  store i64 %21, i64* %7, align 8
  %22 = load i64, i64* %7, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %13
  br label %29

25:                                               ; preds = %13
  br label %26

26:                                               ; preds = %25
  %27 = load i32, i32* %8, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %8, align 4
  br label %9

29:                                               ; preds = %24, %9
  %30 = load i64, i64* %7, align 8
  %31 = icmp ne i64 %30, 0
  %32 = zext i1 %31 to i32
  ret i32 %32
}

declare dso_local i64 @foreach_principal(i8*, i32, i8*, %struct.modify_options*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
